# saddle-world-fog-of-war

./: .gitignore  Cargo.toml  README.md  __data.json  index.html
_app/: version.json
_app/immutable/chunks/: 9f_kwT-8.js  B3WmIRYT.js  B7OUjOu0.js  BFBPwOO7.js  BH45KY2J.js  BIxFJH-X.js  C9FTPAdG.js  NFcBTXxr.js  VD95UNXc.js  pjsIIU9l.js
_app/immutable/entry/: app.BYhE97mK.js  app.BoPQ6ZD2.js  start.IOa9Orka.js  start.SiuHZLLf.js
_app/immutable/nodes/: 0.D16ycR9S.js  0.fPl-m3pa.js  1.BLYB_SbC.js  1.CLE2ipDc.js  2.DARMEqH5.js  2.UYDQbMeK.js  3.CizjbVnw.js  3.vDVriCto.js  4.B_Oo7O_0.js  4.mZQzYUF_.js
demo/basic_2d/: index.html
demo/fov_integration/: index.html
demo/lab/: index.html
demo/occlusion_2d/: index.html
demo/projected_3d/: index.html
demo/rts_large_map/: index.html
demo/vision_cones/: index.html
demos/basic_2d/: index.html
demos/fov_integration/: index.html
demos/occlusion_2d/: index.html
demos/projected_3d/: index.html
demos/rts_large_map/: index.html
demos/vision_cones/: index.html
docs/: architecture.md  configuration.md  performance.md
docs/architecture/: __data.json  index.html
docs/architecture.md/: index.html
docs/configuration/: __data.json  index.html
docs/configuration.md/: index.html
docs/performance/: __data.json  index.html
docs/performance.md/: __data.json  index.html
examples/: Cargo.toml
examples/basic_2d/: Cargo.toml
examples/basic_2d/src/: main.rs  scenarios.rs
examples/fov_integration/: Cargo.toml
examples/fov_integration/src/: main.rs  scenarios.rs
examples/lab/: Cargo.toml  README.md
examples/lab/src/: e2e.rs  main.rs
examples/lab/src/scenarios/: mod.rs
examples/occlusion_2d/: Cargo.toml
examples/occlusion_2d/src/: main.rs  scenarios.rs
examples/projected_3d/: Cargo.toml
examples/projected_3d/src/: main.rs  scenarios.rs
examples/rts_large_map/: Cargo.toml
examples/rts_large_map/src/: main.rs  scenarios.rs
examples/support/: Cargo.toml
examples/support/src/: lib.rs
examples/vision_cones/: Cargo.toml
examples/vision_cones/src/: main.rs  scenarios.rs
src/: components.rs  grid.rs  grid_tests.rs  lib.rs  math.rs  messages.rs  persistence.rs  resources.rs  systems.rs  systems_tests.rs  visibility.rs  visibility_tests.rs
src/rendering/: material_2d.rs  material_3d.rs  mod.rs  upload.rs
src/shaders/: fog_overlay_2d.wgsl  fog_overlay_3d.wgsl
tests/: performance.rs
