[package]
name = "saddle-world-fog-of-war-lab"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = ["dev"]
dev = ["dep:bevy_brp_extras"]
e2e = ["dep:saddle-bevy-e2e"]

[dependencies]
bevy = { version = "0.18", features = ["bevy_remote", "serialize"] }
saddle-world-fog-of-war = { workspace = true }
bevy_flair = "0.7"
bevy_input_focus = "0.18"
bevy_ui_widgets = "0.18"
saddle-pane = { git = "https://github.com/julien-blanchon/saddle-pane" }
bevy_brp_extras = { version = "0.19", optional = true }
saddle-bevy-e2e = { git = "https://github.com/julien-blanchon/saddle-bevy-e2e", features = ["json"], optional = true }

[lints]
workspace = true
