[package]
name = "saddle-world-fog-of-war-example-support"
version = "0.1.0"
edition = "2024"
publish = false

[features]
e2e = ["dep:saddle-bevy-e2e"]

[dependencies]
bevy = { workspace = true }
saddle-world-fog-of-war = { workspace = true }
saddle-bevy-e2e = { git = "https://github.com/julien-blanchon/saddle-bevy-e2e", features = ["json"], optional = true }

[lints]
workspace = true
