[package]
name = "saddle-world-fog-of-war-example-vision-cones"
version = "0.1.0"
edition = "2024"
publish = false

[features]
e2e = ["saddle-world-fog-of-war-example-support/e2e"]

[dependencies]
bevy = { workspace = true }
saddle-world-fog-of-war = { workspace = true }
saddle-world-fog-of-war-example-support = { path = "../support" }
bevy_flair = "0.7"
bevy_input_focus = "0.18"
bevy_ui_widgets = "0.18"
saddle-pane = { git = "https://github.com/julien-blanchon/saddle-pane" }

[lints]
workspace = true
